pretty nice first version of the about page

--- a/about.html
+++ b/about.html
@@ -7,5 +7,40 @@ title: "About"
 <section class="content">
   <h1>{{ site.name }}</h1>
 
-  <p>This would be an excellent time to update this page and talk about yourself a bit.</p>
+  <p>
+    Hi! I'm Peter and I'm a program-a-holic; I've been programming stuff since I was 9 or 10 years old and at 25 I still find it very rewarding.
+    I'm more than a programmer, though. I wouldn't say I'm a programmer, but more of an inventor; I'm the most happy when I get to design and
+    implement a new project. I hope that doesn't sound too pretentious, but creating things is close to heart.
+  </p>
+  <p>
+    If you have any projects that you think I could help you out with, don't hesitate to contact me. One of my most important projects right now is to
+    shape the future of my consulting business&mdash;I'm eager to hear what makes your company tick.
+  </p>
+
+  
+  <p>
+    Things that I like:
+
+    <ul>
+      <li>Ridiculously simple solutions to complex problems</li>
+      <li>Emacs, Mac OS X, iPhone, the Open Source + Mac + JavaScript + GitHub Culture<br />
+      <small>I've also been known to enjoy working in Linux and survive Windows.</small></li>
+      <li>C++, C, Ruby, Scheme, or anything else. I've even begun to like Java <i>EE</i><br /><small>Don't let this fool you though. I'm pretty good with C++, but I also like working in Java and Obj-C.</small></li>
+      <li>Web service back-ends, high availability, etc.</li>
+      <li>UX&mdash;for being technically inclined, I'm quite picky with my UIs</li>
+    </ul>
+  </p> 
+
+  <p>
+    Things that I've made:
+
+    <ul>
+      <li>Different kinds of servers; file servers, chat servers, web servers and game servers</li>
+      <li>Programming languages; both interpreted and compiled languages. Mostly dynamic</li>
+      <li>Operating system kernels supporting multi-tasking, filesystems, virtual + protected memory, etc.</li>
+      <li>3D games using OpenGL with fancy shader graphics and physics using ODE</li>
+      <li>Networked realtime 2D games using UDP. Prediction can be such a mess</li>
+    </ul>
+    
+  </p>
 </section>
