--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@ title: "About"
   </p>
   <p>
     If you have any projects that you think I could help you out with, don't hesitate to contact me. One of my most important projects right now is to
-    shape the future of my consulting business&mdash;I'm eager to hear what makes your company tick.
+    shape the future of my consulting business&mdash;I'm eager to hear what makes your company tick. 
   </p>
 
   
@@ -36,11 +36,17 @@ title: "About"
 
     <ul>
       <li>Different kinds of servers; file servers, chat servers, web servers and game servers</li>
-      <li>Programming languages; both interpreted and compiled languages. Mostly dynamic</li>
-      <li>Operating system kernels supporting multi-tasking, filesystems, virtual + protected memory, etc.</li>
+      <li>Programming languages; both interpreted and compiled dynamic languages<br />
+      <small>My master's thesis is about optimizing a dynamic language on <a href="http://www.llvm.org" target="_blank">LLVM</a>.</small></li>
+      <li>Operating system kernels supporting multi-tasking, filesystems, protected memory<br />
+      <small>It's all about IRQs, IDTs, DMA, MMUs, PITs and GDTs!</small></li>
       <li>3D games using OpenGL with fancy shader graphics and physics using ODE</li>
       <li>Networked realtime 2D games using UDP. Prediction can be such a mess</li>
     </ul>
     
+  </p>
+
+  <p>
+    You can contact me at <b>peter (at) iostream (dot) cc</b>.
   </p>
 </section>
