--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@ title: "About"
   </p>
   <p>
     If you have any projects that you think I could help you out with, don't hesitate to contact me. One of my most important projects right now is to
-    shape the future of my consulting business&mdash;I'm eager to hear what makes your company tick. 
+    shape the future of my consulting business and I'm eager to hear what makes your company tick. 
   </p>
 
   
