about looks a bit better

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@ title: "About"
 
   <p>
     Hi! I'm Peter and I'm a program-a-holic; I've been programming stuff since I was 9 or 10 years old and at 25 I still find it very rewarding.
-    I'm more than a programmer, though. I wouldn't say I'm a programmer, but more of an inventor; I'm the most happy when I get to design and
+    I'm more than a programmer, though. I'm also something of an inventor; I'm the most happy when I get to design and
     implement a new project. I hope that doesn't sound too pretentious, but creating things is close to heart.
   </p>
   <p>
