added ios to about

--- a/about.html
+++ b/about.html
@@ -35,6 +35,7 @@ title: "About"
     Things that I've made:
 
     <ul>
+      <li>Cocoa and Cocoa Touch projects, for desktop and iOS devices</li>
       <li>Different kinds of servers; file servers, chat servers, web servers and game servers</li>
       <li>Programming languages; both interpreted and compiled dynamic languages<br />
       <small>My master's thesis is about optimizing a dynamic language on <a href="http://www.llvm.org" target="_blank">LLVM</a>.</small></li>
@@ -47,6 +48,6 @@ title: "About"
   </p>
 
   <p>
-    You can contact me at <b>peter (at) iostream (dot) cc</b>.
+    You can contact me at <a href="mailto:peter@iostream.cc">peter@iostream.cc</a>.
   </p>
 </section>
