--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@ title: "About"
       <li>Cocoa and Cocoa Touch projects, for desktop and iOS devices</li>
       <li>Different kinds of servers; file servers, chat servers, web servers and game servers</li>
       <li>Programming languages; both interpreted and compiled dynamic languages<br />
-      <small>My master's thesis is about optimizing a dynamic language on <a href="http://www.llvm.org" target="_blank">LLVM</a>.</small></li>
+      <small>My master's thesis is about optimizing dynamic languages on <a href="http://www.llvm.org" target="_blank">LLVM</a>.</small></li>
       <li>Operating system kernels supporting multi-tasking, filesystems, protected memory<br />
       <small>It's all about IRQs, IDTs, DMA, MMUs, PITs and GDTs!</small></li>
       <li>3D games using OpenGL with fancy shader graphics and physics using ODE</li>
